CR-2006-01-04-2: Bugfix:    fixed error report for unexpected user specific
                            envirionment variables in functional/job_environment

JG-2006-01-04-1: Bugfix:    consumable_resources test relied on different
                            timetamps of load sensor scripts - which was no 
                            longer the case after cvs import to testsuite 
                            project. Modify timestamp of loadsensor file in 
                            test.

CR-2006-01-04-1: Bugfix:    don't start system_tests/commlib/issues test on
                            irix host and wait 5 sec before starting client

CR-2006-01-04-0: Bugfix:    fixed windows/gui test when there are no
                            windows host configured

JG-2006-01-04-0: Enhancem.: Enhanced consumable_resources test.
                            Increased timeout in drmaaj test.
                 Cleanup:   shadowd_migrate

JG-2006-01-03-2: Bugfix:    added missing script for drmaaj test

CR-2006-01-03-1: Cleanup:   added more information to warning messages

JG-2006-01-03-1: Bugfix:    qtcsh test failed for SGE 6.0. Cleanup.

JG-2006-01-03-0: Bugfix:    fixed qstat test for SGE 6.0.

CR-2006-01-03-0: Cleanup:   test if build arch directory exists in procedure
                            resolve_build_arch_installed_libs()

JG-2006-12-28-2: Cleanup:   Verified use of wait_for_jobend function.

JG-2006-12-28-1: Enhancem.: Skip darwin hosts in test bugs/issuezilla/126 - the 
                            darwin ps command doesn't output suspended state of
                            processes.
                 Bugfix:    Fixed functional/job_environment.
                            Fixed system_tests/clients/common/setup.

JG-2006-12-28-0: Bugfix:    Avoid errors from complex test on slow machines (or
                            when running in memory debugger).
                 Cleanup:   Don't use CHECK_ACT_PATH as absolute path of the 